# horses

./: .env.example  .gitignore  AIDLC_FUTURES.md  BRAINDUMP.md  README.md  docker-compose.yml
.claude/: settings.local.json
api/: __init__.py  cache.py  main.py  model.py  normalize.py  pyproject.toml  refresh.py  sim.py  tickets.py
api/sources/: __init__.py  equibase.py  fixture.py  pick5.py  twinspires.py
api/tests/: conftest.py  test_equibase.py  test_friday_e2e.py  test_main.py  test_probability_model.py  test_sim.py  test_stale_fallback.py  test_tickets.py  test_twinspires.py
data/: priors.json
derby/: README.md
derby/.aidlc/: config.json  planning_index.md
derby/.aidlc/discovery/: findings.md  topics.json
derby/.aidlc/issues/: ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  ISSUE-005.md  ISSUE-006.md  ISSUE-007.md  ISSUE-008.md  ISSUE-009.md  ISSUE-010.md  ISSUE-011.md  ISSUE-012.md  ISSUE-013.md  ISSUE-014.md
derby/.aidlc/research/: alternative-data-sources.md  equibase-data-access.md  kentuckyderby-odds-endpoint.md  live-odds-timing-and-frequency.md  odds-snapshot-storage-backend.md  pick5-sequence-identification.md  scratch-detection-source.md  twinspires-scraper-feasibility.md
derby/api/: pyproject.toml  tickets.py
derby/api/sources/: kentuckyderby.py
derby/api/tests/: test_cache.py  test_main.py  test_model.py  test_tickets.py
derby/data/: priors.json
derby/docs/audits/: cleanup-report.md
derby/web/: package-lock.json  package.json
derby/web/lib/: api.ts  (+1 more)
docs/audits/: cleanup-report.md  docs-consolidation.md  error-handling-report.md  security-report.md  ssot-report.md
fixtures/pick5/: friday-card.json  friday-odds.json  saturday-card.json  saturday-odds.json
sports/derby/: .env.example
web/: next.config.mjs  package.json  tsconfig.tsbuildinfo
web/app/: globals.css
web/components/: HorseRow.tsx  RaceCard.tsx  SimulationSummary.tsx  Spinner.tsx  TagPicker.tsx  TicketBuilder.tsx
web/lib/: format.ts  odds.ts  types.ts
(+34 files in other folders)
