[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derby-api"
version = "0.1.0"
description = "Derby weekend Pick 5 backend — race card and odds ingestion, simulation, and ticket builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "httpx>=0.27,<1.0",
    "curl-cffi>=0.7,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# ``live`` is deselected by default, so tests carrying this marker are not
# run during ordinary CI / pre-commit cycles. Do not apply ``@pytest.mark.live``
# to security-regression tests — see docs/audits/security-report.md S12. If
# a regression check needs a real external service, gate it on a separate
# marker so the default run still enforces the security invariant.
markers = [
    "live: marks tests that call real external services (deselected by default)",
]
addopts = "-m 'not live'"
